[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/scenery_one.gd" type="Script" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://Arte/Aviões/plane_red.png" type="Texture" id=3]
[ext_resource path="res://Arte/Cenário/cenario_filtro_1.jpg" type="Texture" id=4]
[ext_resource path="res://assets/cima0.png" type="Texture" id=5]
[ext_resource path="res://assets/baixo0.png" type="Texture" id=6]
[ext_resource path="res://assets/esquerda0.png" type="Texture" id=7]
[ext_resource path="res://assets/direita0.png" type="Texture" id=8]
[ext_resource path="res://sounds/Impactist_-_Wires.smp" type="Sample" id=9]

[sub_resource type="CircleShape2D" id=5]

custom_solver_bias = 0.0
radius = 60.2412

[sub_resource type="SegmentShape2D" id=1]

custom_solver_bias = 0.0
a = Vector2( -102.026, 1.92374 )
b = Vector2( 98.291, 1.92374 )

[sub_resource type="SegmentShape2D" id=2]

custom_solver_bias = 0.0
a = Vector2( 694.519, 9.755 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=6]

custom_solver_bias = 0.0
a = Vector2( 5.63708, 1273.46 )
b = Vector2( 0, 10 )

[sub_resource type="SegmentShape2D" id=7]

custom_solver_bias = 0.0
a = Vector2( 0.601929, 1265.37 )
b = Vector2( 0, 10 )

[sub_resource type="Animation" id=8]

resource/name = "infinit_roda"
length = 4.0
loop = true
step = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("animBackground/sprite2:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -1260 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("animBackground/sprite1:transform/pos")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 4 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1260 ) ]
}

[sub_resource type="SampleLibrary" id=9]

samples/Impactist_-_Wires = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[node name="startGame" type="Node2D"]

script/script = ExtResource( 1 )

[node name="plane" type="RigidBody2D" parent="."]

editor/display_folded = true
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 353.487, 890.526 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
mode = 2
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 0.5
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 2 )

[node name="player" type="Sprite" parent="plane"]

transform/pos = Vector2( 353.885, 894.526 )
transform/scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 3 )

[node name="shape" type="CollisionShape2D" parent="plane"]

transform/pos = Vector2( 353.487, 890.526 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="limites" type="StaticBody2D" parent="."]

editor/display_folded = true
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.4645, 0, 0, 1, 354.675, 2.21606 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 3.3241, 1265.54 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 6 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 7 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 696.839, -2.51758 )
shapes/3/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="up" type="CollisionShape2D" parent="limites"]

transform/pos = Vector2( 354.675, 2.21606 )
transform/scale = Vector2( 3.4645, 1 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="down" type="CollisionShape2D" parent="limites"]

transform/pos = Vector2( 3.3241, 1265.54 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="left" type="CollisionShape2D" parent="limites"]

shape = SubResource( 6 )
trigger = false
_update_shape_index = 2

[node name="right" type="CollisionShape2D" parent="limites"]

transform/pos = Vector2( 696.839, -2.51758 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 3

[node name="animBackground" type="AnimationPlayer" parent="."]

editor/display_folded = true
playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/infinit_roda = SubResource( 8 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "infinit_roda"

[node name="sprite1" type="Sprite" parent="animBackground"]

transform/pos = Vector2( 0, 1156.91 )
texture = ExtResource( 4 )
centered = false

[node name="sprite2" type="Sprite" parent="animBackground"]

transform/pos = Vector2( 0, -103.088 )
texture = ExtResource( 4 )
centered = false

[node name="control" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( -28.8781, 143.538 )
z/z = 1

[node name="bt-up" type="TextureButton" parent="control"]

rect/scale = Vector2( 2.5, 2.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 540.0
margin/top = 847.0
margin/right = 580.0
margin/bottom = 887.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 5 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="bt-down" type="TextureButton" parent="control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 541.0
margin/top = 1027.0
margin/right = 631.0
margin/bottom = 1117.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 6 )
params/resize_mode = 0
params/scale = Vector2( 2.5, 2.5 )
params/stretch_mode = 0

[node name="bt-left" type="TextureButton" parent="control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 934.0
margin/right = 540.0
margin/bottom = 1024.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )
params/resize_mode = 0
params/scale = Vector2( 2.5, 2.5 )
params/stretch_mode = 0

[node name="bt-right" type="TextureButton" parent="control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 630.0
margin/top = 937.0
margin/right = 720.0
margin/bottom = 1027.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )
params/resize_mode = 0
params/scale = Vector2( 2.5, 2.5 )
params/stretch_mode = 0

[node name="samplePlay" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 9 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[connection signal="button_down" from="control/bt-up" to="." method="_on_btup_button_down"]

[connection signal="button_up" from="control/bt-up" to="." method="_on_btup_button_up"]

[connection signal="pressed" from="control/bt-up" to="plane" method="_on_btup_pressed"]

[connection signal="button_down" from="control/bt-down" to="." method="_on_btdown_button_down"]

[connection signal="button_up" from="control/bt-down" to="." method="_on_btdown_button_up"]

[connection signal="pressed" from="control/bt-down" to="plane" method="_on_btdown_pressed"]

[connection signal="button_down" from="control/bt-left" to="." method="_on_btleft_button_down"]

[connection signal="button_up" from="control/bt-left" to="." method="_on_btleft_button_up"]

[connection signal="pressed" from="control/bt-left" to="plane" method="_on_btleft_pressed"]

[connection signal="button_down" from="control/bt-right" to="." method="_on_btright_button_down"]

[connection signal="button_up" from="control/bt-right" to="." method="_on_btright_button_up"]

[connection signal="pressed" from="control/bt-right" to="plane" method="_on_btright_pressed"]


